src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__after_one_read.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 169
expression: reply
---
{"Type": "EMPTY", "Number of reading operations": 0}
