src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__after_two_reads.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{"Type": "EMPTY", "Number of reading operations": 1}
