src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__empty.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 76
expression: reply
---
{"Type": "EMPTY"}
