src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__id_list_sorted.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 92
expression: reply
---
{"Type": "ID-LIST-SORTED"}
