src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__intersection_two_children.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 227
expression: reply
---
{
  "Type": "INTERSECT",
  "Child iterators": [{"Type": "EMPTY"}, {"Type": "EMPTY"}]
}
