src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__leaf_with_clock.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 129
expression: reply
---
{"Type": "EMPTY", "Time": 1.5, "Number of reading operations": 3}
