src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__leaf_with_counters.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 112
expression: reply
---
{"Type": "EMPTY", "Number of reading operations": 14}
