src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__metric_sorted_by_id.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 139
expression: reply
---
{
  "Type": "METRIC SORTED BY ID - VECTOR DISTANCE",
  "Vector search mode": "RANGE_QUERY"
}
