src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__metric_sorted_by_score.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
assertion_line: 147
expression: reply
---
{
  "Type": "METRIC SORTED BY SCORE - VECTOR DISTANCE",
  "Vector search mode": "RANGE_QUERY"
}
