src/redisearch_rs/rqe_iterators/tests/integration/snapshots/integration__profile_print__missing_with_field.snap
---
source: rqe_iterators/tests/integration/profile_print.rs
expression: reply
---
{"Type": "MISSING", "Field": b"text_field"}
